--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "repository": "TODO",
   "README": "TODO",
   "devDependencies": {
-    "browserify": "^4.1.6",
+    "browserify": "4.2.0",
     "chai-as-promised": "^4.1.1",
     "envify": "^1.2.1",
     "grunt": "^0.4.5",
