--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "shelljs": "^0.3.0"
   },
   "dependencies": {
+    "keygrip": "^1.0.1",
     "koa": "^0.6.1",
     "koa-body-parser": "^1.1.0",
     "koa-mount": "^1.3.0",
@@ -32,6 +33,8 @@
     "lodash": "^2.4.1",
     "mysql": "^2.3.2",
     "nconf": "^0.6.9",
+    "nodemailer": "^1.0.3",
+    "nodemailer-ses-transport": "^0.1.1",
     "nopt": "^3.0.0",
     "q": "^1.0.1",
     "react": "^0.10.0"
