--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "browser-request": "^0.3.2",
+    "intl": "^0.1.4",
     "keygrip": "^1.0.1",
     "koa": "^0.6.1",
     "koa-body-parser": "^1.1.0",
@@ -38,6 +39,7 @@
     "nopt": "^3.0.0",
     "q": "^1.0.1",
     "react": "^0.10.0",
+    "react-intl": "^1.0.0-rc-1",
     "request": "^2.40.0"
   }
 }
