--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-uglify": "^0.4.0",
+    "grunt-jsonlint": "^1.0.4",
     "grunt-shell": "^0.7.0",
     "jsdom": "^0.10.6",
     "react-tools": "^0.10.0",
