--- a/config/development.config.json
+++ b/config/development.config.json
@@ -14,6 +14,14 @@
             "host": "localhost",
             "database": "crowdictionary",
             "connectionLimit": 10
+        },
+        "dbip": {
+            "dbConfig": {
+                "host": "localhost",
+                "database": "dbip",
+                "table": "dbip_lookup",
+                "connectionLimit": 10
+            },
         }
     },
     "cookies": {
