--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "keygrip": "^1.0.1",
     "koa": "^0.6.1",
     "koa-body-parser": "^1.1.0",
+    "koa-compress": "^1.0.8",
     "koa-mount": "^1.3.0",
     "koa-router": "^3.2.1",
     "koa-static": "^1.4.5",
