almost done with simple l10n-friendly email notification infrastructure

--- a/config/development.config.json
+++ b/config/development.config.json
@@ -17,6 +17,10 @@
             }
         }
     },
+    "mailer": {
+        "transport": "ses",
+        "rateLimit": 10
+    },
     "cookies": {
         "user": {
             "name": "U",
